[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/Levels/BaseLevel.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Levels/Level3.gd" type="Script" id=2]
[ext_resource path="res://src/Enemies/Boss.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/wav/sawsquarenoise - Title Screen.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/wav/laser3.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/wav/smalllas.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/wav/player_death.wav" type="AudioStream" id=7]

[node name="Level3" type="Node2D"]
script = ExtResource( 2 )

[node name="BaseLevel" parent="." instance=ExtResource( 1 )]
position = Vector2( 2, -4.82837 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Boss" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -727.455 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="SmallBulletSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="BigBulletSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="BossDeathPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
pitch_scale = 0.6
[connection signal="faded_out" from="BaseLevel" to="." method="_on_BaseLevel_faded_out"]
[connection signal="death" from="Boss" to="." method="_on_Boss_death"]
[connection signal="fire_large_gun" from="Boss" to="." method="_on_Boss_fire_large_gun"]
[connection signal="fire_small_gun" from="Boss" to="." method="_on_Boss_fire_small_gun"]
